# OnlineMatting

./: db.sqlite3  manage.py  test_proj.ini
koutu/: settings.py  urls.py  wsgi.py
koutuonline/: apps.py  models.py  views.py
koutuonline/AlphaMatting-master/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  sharedmatting.cpp
koutuonline/AlphaMatting-master/AlphaMatting/AlphaMatting/: CMakeLists.txt  SharedMatting.cpp
koutuonline/closed-form-matting-master/: closed_form_matting
koutuonline/migrations/: 0001_initial.py  0002_auto_20181218_1009.py  0003_auto_20181218_1013.py
koutuonline/templates/img_tem/: paint.html  paint2.html  reupload_file_not_exist.html  show.html  upload-editor.html  upload-scribble.html  upload.html
